Added  calculation of pseudoinverse Jacobian matrix

--- a/literatura.bib
+++ b/literatura.bib
@@ -1,5 +1,7 @@
 
 
+
+
 %-------------------------- LITERATURA MAGISTRSKA --------------------------
 % web page citation
 @misc{arc_howto,
@@ -8,11 +10,17 @@
 	howpublished = "Dosegljivo: \url{http://apenwarr.ca/arcnet/howto/index.html}",
 	note = "[Dostopano: 6. 17. 2015]"
 }
-
-@misc{jr3_doc,
+@misc{jr3_doc_ext,
 	author = "JR3, INC.",
-	title = "{JR3, DPS-based force sensor recveivers, software and installation manual}",
-	howpublished = "Dosegljivo: \url{http://apenwarr.ca/arcnet/howto/index.html}",
+	title = "{JR3, Installation manual for force - torque sensors with external electronics}",
+	howpublished = "Dosegljivo: \url{http://www.jr3.com/product-manuals.html}",
+	note = "[Dostopano: 6. 17. 2015]"
+}
+
+@misc{jr3_doc_inst,
+	author = "JR3, INC.",
+	title = "{JR3, DPS-based force sensor receivers, software and installation manual}",
+	howpublished = "Dosegljivo: \url{http://www.jr3.com/product-manuals.html}",
 	note = "[Dostopano: 6. 17. 2015]"
 }
 
@@ -20,6 +28,14 @@
 	title={Vodenje robotov},
 	author={Mihelj, Matja\v{z} and Bajd, Tadej and Munih, Marko},
 	year={2011},
+	publisher={Univerza v Ljubljani, Zalo{\v{z}}ba FE in FRI},
+	address = {Ljubljana}
+}
+
+@book{lenarcic_robotmeh,
+	title={Robotski mehanizmi},
+	author={Lenar\v{c}i\v{c}, Jadran and Bajd, Tadej},
+	year={2003},
 	publisher={Univerza v Ljubljani, Zalo{\v{z}}ba FE in FRI},
 	address = {Ljubljana}
 }
